@@ -7,7 +7,6 @@
 - string cleanups
 - program-launchers for misc account types (announce on rvl-list
   when done in svn)
-- use xpath for xml handling instead of plain dom?
 - add autosaving of files (needs a preference)
 - add docstrings to all objects, methods and functions
 - export to XHTML/CSS files
